# registries_older

./: Makefile.am  README.md  configure.ac  docker.conf  registries.c  registries2  registries2.c
docs/: registries.1.md
test/: test.sh  test0.yaml  test1.yaml  test2.yaml  test3.yaml  test4.yaml
